# rico-scraper

./: .replit  app.py  app_backup.py  app_new.py  bypass_detector.py  cache_existing_profiles.py  category_mapping.py  cloudscraper_results.json  cloudscraper_revolico.py  debug_page_1.html  debug_page_2.html  debug_page_3.html  demo_scraper.py  enhanced_requests_scraper.py  homepage_debug.html  image_service.py  main.py  models.py  models.py.old  phone_parser.py  proxy_manager.py  pyproject.toml  replit.md  revolico_data.json  rico_cuba_endpoints.tmp  scraper_config.py  selenium_browser_scraper.py  selenium_scraper.py  simple_requests_scraper.py  simple_results.json  simple_scraper.py  test_enhanced_scraper.py  test_firefox_setup.py  test_firefox_vps.py  test_results.json  test_selenium.py  test_single_listing.py  test_whatsapp_firefox.py  utils.py  whatsapp_automation.py  (+2 more)
attached_assets/: Pasted--DOCTYPE-html-html-lang-es-head-meta-charSet-utf-8-data-next-head-link-rel-icon-hre-1753061726770_1753061726773.txt  Pasted--DOCTYPE-html-html-lang-es-head-meta-charSet-utf-8-data-next-head-link-rel-icon-hre-1753114156541_1753114156546.txt  Pasted--REPLIT-PROMPT-NORMALE-BROWSER-SIMULATION-Da-revolico-com-im-normalen-Browser-ohne-Cloudflare-1753060210365_1753060210365.txt  Pasted--REPLIT-PROMPT-REVOLICO-TELEFONNUMMER-SCRAPER-F-R-REPLIT-AGENT-ASSISTANT-Erstelle-ein-Py-1753056396289_1753056396290.txt  Pasted--REPLIT-PROMPT-WHATSAPP-WEB-INTEGRATION-Erstelle-WhatsApp-Web-Automation-System-mit-2-separat-1753115036334_1753115036337.txt  (+5 more)
instance/: revolico_customers.db
(+265 files in other folders)
