[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "lxml>=5.4.0",
    "requests-html>=0.10.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "cloudscraper>=1.2.71",
    "fake-useragent>=2.2.0",
    "brotli>=1.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
]
